# halton

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
benches/: bench.rs
examples/: halton-sequence.rs  place.rs
src/: lib.rs
