[package]
name = "halton"
version = "0.3.0"
authors = ["Mat Sadler <mat@sourcetagsandcodes.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/matsadler/halton"
homepage = "https://github.com/matsadler/halton"
description = "A module for generating Halton sequences"
categories = ["algorithms", "mathematics", "no-std"]

[dev-dependencies]
approx = "0.3"
